# ComfyUI-Prompt-Camera-Assistant

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: publish_action.yml
example_workflows/: Prompt-Camera-Assist_z_image_turbo_example.json  Prompt-Camera-Assistant_flux_dev_fp8_example.json
src/comfyui_prompt_camera_assistant/: __init__.py  nodes.py
tests/: __init__.py  test_comfyui_prompt_camera_assistant.py
