# pyproject.toml
[project]
name = "comfyui_prompt_camera_assistant" # Unique identifier for your node. Immutable after creation.
description = "Prompt camera assistant for adding camera details to prompts."
version = "1.0.0" # Custom Node version. Must be semantically versioned.
license = {text = "MIT license"}
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/bcasadei/ComfyUI-Prompt-Camera-Assistant"

[tool.comfy]
PublisherId = "bcasadei"
DisplayName = "Prompt Camera Assistant"




